--- a/flashPrice/flashPrice/assets/css/main.css
+++ b/flashPrice/flashPrice/assets/css/main.css
@@ -288,7 +288,7 @@ button:-moz-focusring,
 /**
  * Correct the padding in Firefox.
  */
-fieldset {
+.fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
 
@@ -298,7 +298,7 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
-legend {
+.legend {
   box-sizing: border-box;
   /* 1 */
   color: inherit;
@@ -428,7 +428,7 @@ html {
   height: 100%;
 }
 
-fieldset {
+.fieldset {
   margin: 0;
   padding: 0;
   -webkit-margin-start: 0;
@@ -440,7 +440,7 @@ fieldset {
   border: 0;
 }
 
-legend {
+.legend {
   margin: 0;
   padding: 0;
   display: block;
@@ -810,7 +810,7 @@ legend {
   box-sizing: border-box;
 }
 
-.s004 {
+.mainHome {
     min-height: 100vh;
     display: -ms-flexbox;
     display: flex;
@@ -826,34 +826,34 @@ legend {
     padding: 15px;
 }
 
-.s004 form {
+.mainHome .form {
   width: 100%;
   max-width: 790px;
 }
 
-.s004 form legend {
+.mainHome .form .legend {
   font-size: 36px;
   color: #fff;
   font-weight: 800;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
-.s004 form .inner-form {
+.mainHome .form .inner-form {
   width: 100%;
   margin-bottom: 17px;
 }
 
-.s004 form .inner-form .input-field {
+.mainHome .form .inner-form .input-field {
   width: 100%;
   position: relative;
 }
 
-.s004 form .inner-form .input-field .choices {
+.mainHome .form .inner-form .input-field .choices {
   margin-bottom: 0;
 }
 
-.s004 form .inner-form .input-field .choices .choices__inner {
+.mainHome .form .inner-form .input-field .choices .choices__inner {
   min-height: 70px;
   width: 100%;
   background: transparent;
@@ -873,7 +873,7 @@ legend {
       align-items: center;
 }
 
-.s004 form .inner-form .input-field .choices .choices__inner .choices__list .choices__item {
+.mainHome .form .inner-form .input-field .choices .choices__inner .choices__list .choices__item {
   background: #e7e7e7;
   color: #333;
   line-height: 33px;
@@ -882,7 +882,7 @@ legend {
   font-size: 16px;
 }
 
-.s004 form .inner-form .input-field .choices .choices__inner .choices__list .choices__item .choices__button {
+.mainHome .form .inner-form .input-field .choices .choices__inner .choices__list .choices__item .choices__button {
   border-left: 0;
   color: #b2b2b2;
   background-image: url(../images/icons/close.svg);
@@ -892,18 +892,18 @@ legend {
   transition: all .2s ease-out, color .2s ease-out;
 }
 
-.s004 form .inner-form .input-field .choices .choices__inner .choices__list .choices__item .choices__button:hover {
+.mainHome .form .inner-form .input-field .choices .choices__inner .choices__list .choices__item .choices__button:hover {
   opacity: 1;
 }
 
-.s004 form .inner-form .input-field .choices .choices__inner .choices__input {
+.mainHome .form .inner-form .input-field .choices .choices__inner .choices__input {
   font-size: 16px;
   color: #333;
   background-color: transparent;
   margin-bottom: 0;
 }
 
-.s004 form .inner-form .input-field .choices .choices__list--dropdown {
+.mainHome .form .inner-form .input-field .choices .choices__list--dropdown {
   background: transparent;
   font-size: 16px;
   color: #fff;
@@ -911,7 +911,7 @@ legend {
   padding: 0 32px;
 }
 
-.s004 form .inner-form .input-field .choices .choices__list--dropdown .choices__item {
+.mainHome .form .inner-form .input-field .choices .choices__list--dropdown .choices__item {
   font-size: 13px;
   height: 25px;
   line-height: 1.3;
@@ -920,7 +920,7 @@ legend {
   opacity: .7;
 }
 
-.s004 form .inner-form .input-field .btn-search {
+.mainHome .form .inner-form .input-field .btn-search {
   width: 70px;
   display: -ms-flexbox;
   display: flex;
@@ -940,27 +940,27 @@ legend {
   align-items: center;
 }
 
-.s004 form .inner-form .input-field .btn-search svg {
+.mainHome .form .inner-form .input-field .btn-search svg {
   fill: #333;
   width: 40px;
   height: 40px;
   transition: all .2s ease-out, color .2s ease-out;
 }
 
-.s004 form .inner-form .input-field .btn-search:hover, .s004 form .inner-form .input-field .btn-search:focus {
+.mainHome .form .inner-form .input-field .btn-search:hover, .mainHome form .inner-form .input-field .btn-search:focus {
   outline: 0;
   box-shadow: none;
 }
 
-.s004 form .inner-form .input-field .btn-search:hover svg, .s004 form .inner-form .input-field .btn-search:focus svg {
+.mainHome .form .inner-form .input-field .btn-search:hover svg, .mainHome form .inner-form .input-field .btn-search:focus svg {
   fill: #000;
 }
 
-.s004 form .suggestion-wrap {
+.mainHome .form .suggestion-wrap {
   padding: 0 15px;
 }
 
-.s004 form .suggestion-wrap span {
+.mainHome .form .suggestion-wrap span {
   font-size: 14px;
   font-family: 'Helvetica', sans-serif;
   display: inline-block;
