--- a/flashPrice/flashPrice/default.Master
+++ b/flashPrice/flashPrice/default.Master
@@ -18,6 +18,7 @@
     <link
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         rel="stylesheet" />
+
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -31,10 +32,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div>
         <form runat="server" id="formMaster">
-            <asp:ScriptManager ID="ScriptManagerMaster" runat="server" EnablePartialRendering="false"
+
+            <asp:ScriptManager ID="ScriptManagerMaster" runat="server" EnablePartialRendering="true"
                 EnableScriptGlobalization="true" EnableScriptLocalization="true" ScriptMode="Release">
                 <Scripts>
                 </Scripts>
@@ -42,8 +45,13 @@
 
             <asp:ContentPlaceHolder ID="mainContentPh" runat="server">
             </asp:ContentPlaceHolder>
-
         </form>
     </div>
 </body>
 </html>
+
+<div class="container">
+    <footer class="py-3 my-4">
+        <p class="text-center text-muted">© 2022 Devina Winaya - 00000033896</p>
+    </footer>
+</div>
