--- a/flashPrice/flashPrice/default.Master
+++ b/flashPrice/flashPrice/default.Master
@@ -23,6 +23,11 @@
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
         rel="stylesheet" />
 
+    <!-- Google API -->
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-G5YgaCxe6G40fs8D7DQ0XnfZHO32FCc&callback=initMap">
+    </script>
+
     <%--font--%>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
 
@@ -38,8 +43,8 @@
     <%--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>--%>
 </head>
 
-<body>
-    <div>
+<body class="d-flex flex-column min-vh-100" style="overflow-x:hidden;">
+
         <form runat="server" id="formMaster">
 
             <asp:ScriptManager ID="ScriptManagerMaster" runat="server" EnablePartialRendering="true"
@@ -71,29 +76,30 @@
             <asp:ContentPlaceHolder ID="mainContentPh" runat="server">
             </asp:ContentPlaceHolder>
         </form>
-    </div>
-</body>
-</html>
 
 
-<footer class="py-3 my-4" style="background-color:#fbd746">
+    <footer class="pt-3 mt-auto" style="background-color: #fbd746">
     <div class="row">
         <div class="col-md-6 col-sm-12 col-xs-12 my-auto">
             <p class="text-center">
-               <img src="assets/images/flashPriceLogo.png" style="width: 150px;" />
+                <img src="assets/images/flashPriceLogo.png" style="width: 150px;" />
             </p>
             <p class="text-center">© 2022 Devina Winaya - 00000033896</p>
         </div>
         <div class="col-md-6 col-sm-12 col-xs-12">
             <h3>Contact Person</h3>
-            <address>Devina Winaya</address>
-            <ul class="list-unstyled links mb-4">
-                <li><a style="color:black; text-decoration:none;" href="https://wa.me/+6281383137726"><i class="fa fa-mobile mr-2"></i>0813 8313 7726</a></li>
-                <li><a style="color:black; text-decoration:none;" href="mailto:devina.winaya@student.umn.ac.id"><i class="fa fa-envelope mr-2"></i>devina.winaya@student.umn.ac.id</a></li>
+            <span>Devina Winaya</span>
+            <ul class="list-unstyled mb-4">
+                <li><a style="color: black; text-decoration: none;" href="https://wa.me/+6281383137726"><i class="fa fa-mobile pr-2"></i>0813 8313 7726</a></li>
+                <li><a style="color: black; text-decoration: none;" href="mailto:devina.winaya@student.umn.ac.id"><i class="fa fa-envelope pr-2"></i>devina.winaya@student.umn.ac.id</a></li>
             </ul>
 
         </div>
 
     </div>
 </footer>
+
+</body>
+</html>
+
 
