--- a/flashPrice/flashPrice/default.Master
+++ b/flashPrice/flashPrice/default.Master
@@ -57,10 +57,10 @@
                 <div class="navbar-collapse h5 ml-4" id="navbarText">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item font-weight-bold">
-                            <a class="nav-link" href="home.aspx">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="home.aspx"><i class="fa fa-home mr-2"></i>Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item font-weight-bold">
-                            <a class="nav-link" href="about.aspx">About</a>
+                            <a class="nav-link" href="about.aspx"><i class="fa fa-info-circle mr-2"></i>About</a>
                         </li>
 
                     </ul>
