--- a/flashPrice/flashPrice/admin.Master
+++ b/flashPrice/flashPrice/admin.Master
@@ -8,48 +8,11 @@
     <title>Admin Pages</title>
 
     <style>
-        /*AutoComplete flyout */
-        .autoCompleteContainer ul li {
-            margin: 0 !important;
-            padding: 0 !important;
-            border: none !important;
-        }
-
-        .autocomplete_completionListElement {
-            margin: 0px !important;
-            padding: 0px !important;
-            background-color: white;
-            color: windowtext;
-            border: buttonshadow;
-            border-width: 1px;
-            border-style: solid;
-            cursor: 'default';
-            overflow: auto;
-            z-index: 9999 !important;
-            width: 408.6px !important;
-            text-align: left;
-            list-style-type: none;
-        }
-
-        /* AutoComplete highlighted item */
-
-        .autocomplete_highlightedListItem {
-            background-color: #007bff;
-            color: white;
-            padding: 0 !important;
-        }
-
-        /* AutoComplete item */
-
-        .autocomplete_listItem {
-            background-color: window;
-            color: windowtext;
-            padding: 1px !important;
-        }
+       
     </style>
 
     <!-- Custom fonts for this template-->
-
+    <link href="assets/css/main.css" rel="stylesheet" />
     <link href="../assets/admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -176,11 +139,7 @@
                                 <!-- Dropdown - User Information -->
                                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                     aria-labelledby="userDropdown">
-                                    <a class="dropdown-item" href="#">
-                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                        Profile
-                                </a>
-                                    <div class="dropdown-divider"></div>
+                              
                                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Logout
