--- a/flashPrice/flashPrice/admin.Master
+++ b/flashPrice/flashPrice/admin.Master
@@ -193,12 +193,11 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Apakah Anda yakin untuk keluar ?</h5>
                         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">×</span>
                         </button>
                     </div>
-                    <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                         <asp:LinkButton class="btn btn-primary" runat="server" ID="logoutBtn" OnClick="logoutBtn_Click"><i class="fa fa-sign-out-alt mr-2"></i> Logout</asp:LinkButton>
