--- a/flashPrice/flashPrice/default.Master
+++ b/flashPrice/flashPrice/default.Master
@@ -7,7 +7,7 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
-    <link href="assets/css/main.css" rel="stylesheet" />
+     <link href="assets/css/main.css" rel="stylesheet" />
     <link href="assets/css/custom.css" rel="stylesheet" />
     <script src="assets/js/extention/choices.js"></script>
     <script src="assets/js/extention/custom-materialize.js"></script>
@@ -39,63 +39,65 @@
 
     <%--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">--%>
     <%--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>--%>
+
+   
 </head>
 
-<body class="d-flex flex-column min-vh-100" style="overflow-x:hidden;">
+<body class="d-flex flex-column min-vh-100" style="overflow-x: hidden;">
 
-        <form runat="server" id="formMaster">
+    <form runat="server" id="formMaster">
 
-            <asp:ScriptManager ID="ScriptManagerMaster" runat="server" EnablePartialRendering="true"
-                EnableScriptGlobalization="true" EnableScriptLocalization="true" ScriptMode="Release">
-                <Scripts>
-                </Scripts>
-            </asp:ScriptManager>
+        <asp:ScriptManager ID="ScriptManagerMaster" runat="server" EnablePartialRendering="true"
+            EnableScriptGlobalization="true" EnableScriptLocalization="true" ScriptMode="Release">
+            <Scripts>
+            </Scripts>
+        </asp:ScriptManager>
 
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f7f89f;">
-                <a href="home.aspx">
-                    <img src="assets/images/flashPriceLogo.png" style="width: 200px;" /></a>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f7f89f;">
+            <a href="home.aspx">
+                <img src="assets/images/flashPriceLogo.png" style="width: 200px;" /></a>
 
-                <div class="navbar-collapse h5 ml-4" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link text-green-leaf" href="home.aspx"><i class="fa fa-home mr-2"></i>Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-green-leaf" href="about.aspx"><i class="fa fa-info-circle mr-2"></i>About</a>
-                        </li>
+            <div class="navbar-collapse h5 ml-4" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link text-green-leaf" href="home.aspx"><i class="fa fa-home mr-2"></i>Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link text-green-leaf" href="about.aspx"><i class="fa fa-info-circle mr-2"></i>About</a>
+                    </li>
 
-                    </ul>
-                    <h5 class="navbar-text text-green-leaf"><i class="fa fa-balance-scale mr-2"></i> Bandingkan dan temukan produk pilihanmu dengan FlashPrice
-                    </h5>
-                </div>
+                </ul>
+                <h5 class="navbar-text text-green-leaf"><i class="fa fa-balance-scale mr-2"></i>Bandingkan dan temukan produk pilihanmu dengan FlashPrice
+                </h5>
+            </div>
 
-            </nav>
+        </nav>
 
-            <asp:ContentPlaceHolder ID="mainContentPh" runat="server">
-            </asp:ContentPlaceHolder>
-        </form>
+        <asp:ContentPlaceHolder ID="mainContentPh" runat="server">
+        </asp:ContentPlaceHolder>
+    </form>
 
 
     <footer class="pt-3 mt-4" style="background-color: #f7f89f">
-    <div class="row">
-        <div class="col-md-6 col-sm-12 col-xs-12 my-auto">
-            <p class="text-center">
-                <img src="assets/images/flashPriceLogo.png" style="width: 150px;" />
-            </p>
-            <p class="text-center">© 2022 Devina Winaya - 00000033896</p>
-        </div>
-        <div class="col-md-6 col-sm-12 col-xs-12">
-            <h3>Contact Person</h3>
-            <span>Devina Winaya</span>
-            <ul class="list-unstyled mb-4">
-                <li><a style="color: black; text-decoration: none;" href="https://wa.me/+6281383137726"><i class="fa fa-mobile pr-2"></i>0813 8313 7726</a></li>
-                <li><a style="color: black; text-decoration: none;" href="mailto:devina.winaya@student.umn.ac.id"><i class="fa fa-envelope pr-2"></i>devina.winaya@student.umn.ac.id</a></li>
-            </ul>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 col-xs-12 my-auto">
+                <p class="text-center">
+                    <img src="assets/images/flashPriceLogo.png" style="width: 150px;" />
+                </p>
+                <p class="text-center">© 2023 Devina Winaya - 00000033896</p>
+            </div>
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <h3>Contact Person</h3>
+                <span>Devina Winaya</span>
+                <ul class="list-unstyled mb-4">
+                    <li><a style="color: black; text-decoration: none;" target="_blank" href="https://wa.me/+6281383137726"><i class="fa fa-mobile pr-2"></i>0813 8313 7726</a></li>
+                    <li><a style="color: black; text-decoration: none;" href="mailto:devina.winaya@student.umn.ac.id"><i class="fa fa-envelope pr-2"></i>devina.winaya@student.umn.ac.id</a></li>
+                </ul>
+
+            </div>
 
         </div>
-
-    </div>
-</footer>
+    </footer>
 
 </body>
 </html>
