--- a/flashPrice/flashPrice/login.Master
+++ b/flashPrice/flashPrice/login.Master
@@ -57,13 +57,13 @@
             <p class="text-center">
                 <img src="assets/images/flashPriceLogo.png" style="width: 150px;" />
             </p>
-            <p class="text-center">© 2022 Devina Winaya - 00000033896</p>
+            <p class="text-center">© 2023 Devina Winaya - 00000033896</p>
         </div>
         <div class="col-md-6 col-sm-12 col-xs-12">
             <h3>Contact Person</h3>
             <span>Devina Winaya</span>
             <ul class="list-unstyled mb-4">
-                <li><a style="color: black; text-decoration: none;" href="https://wa.me/+6281383137726"><i class="fa fa-mobile pr-2"></i>0813 8313 7726</a></li>
+                <li><a style="color: black; text-decoration: none;" target="_blank" href="https://wa.me/+6281383137726"><i class="fa fa-mobile pr-2"></i>0813 8313 7726</a></li>
                 <li><a style="color: black; text-decoration: none;" href="mailto:devina.winaya@student.umn.ac.id"><i class="fa fa-envelope pr-2"></i>devina.winaya@student.umn.ac.id</a></li>
             </ul>
 
